--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.0.4",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/elements": "1.0.4",
     "@react-navigation/material-bottom-tabs": "6.0.4",
@@ -32,6 +32,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-tab-view": "^3.0.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4"
   },
