--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-collapsible": "^1.6.0",
+    "react-native-flatlist-slider": "^1.0.6",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-pager-view": "5.4.6",
     "react-native-paper": "^4.7.2",
